@@ -49,7 +49,7 @@ feature(ace_svcconf) {
 
     "Svc_Conf_Token_Table.h: Svc_Conf.y Svc_Conf_y.cpp"
     "ifeq ($(notdir $(YACC)), bison)"
-    "	$(MV) Svc_Conf.tab.h Svc_Conf_Token_Table.h"
+    "	mv Svc_Conf.tab.h Svc_Conf_Token_Table.h"
     "else"
     "	@echo 'ERROR: You must use bison 1.35 or higher to process this file'"
     "	@/bin/false"
